# dot-save

./: Cargo.toml
src/: main.rs  ssh_key.rs  utils.rs
ui/: appwindow.slint  theme.slint
