[package]
name = "dot_save"
version = "0.1.0"
authors = ["Iudà <86917292+IUDA194@users.noreply.github.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.6"
rfd = "0.14.1"
openssl = "0.10.64"
pem = "3.0.4"
base64 = "0.22.1"
sysinfo = "0.24"
lazy_static = "1.5.0"
aes = "0.7"
block-modes = { version = "0.8", features = ["std"] }
block-padding = "0.2"
sha2 = "0.10"
rsa = "0.5"
rand = "0.8"
pem-rfc7468 = "0.2"
hex = "0.4"

[build-dependencies]
slint-build = "1.6"